--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
 	<name>RulesDemo</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<description>SecureLink Interview Test</description>
-<scm>
-    <connection>scm:git:git://github.com/bartonhammond/RulesDemo.git</connection>
-    <url>https://github.com/bartonhammond/RulesDemo</url>
-</scm>
+	<scm>
+		<connection>scm:git:git://github.com/bartonhammond/RulesDemo.git</connection>
+		<url>https://github.com/bartonhammond/RulesDemo</url>
+	</scm>
 	<developers>
 		<developer>
 			<id>barton</id>
@@ -72,6 +72,8 @@
 		</plugins>
 	</build>
 
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.struts</groupId>
@@ -112,6 +114,21 @@
 			<version>1.9.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<version>2.3.4.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxb-provider</artifactId>
+			<version>2.3.4.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jettison-provider</artifactId>
+			<version>2.3.4.Final</version>
+		</dependency>
 	</dependencies>
 	<reporting>
 		<plugins>
@@ -123,4 +140,5 @@
 		</plugins>
 	</reporting>
 
+	<url>http://trashers.org:8080</url>
 </project>
